es6/feat: filter function

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The lecture book for TMS School",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test-es6": "mocha ./es6"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/sulemanof/js-lectures/issues"
   },
-  "homepage": "https://github.com/sulemanof/js-lectures#readme"
+  "homepage": "https://github.com/sulemanof/js-lectures#readme",
+  "devDependencies": {
+    "mocha": "^5.2.0"
+  }
 }
