--- a/react/my-app/package.json
+++ b/react/my-app/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^16.7.0",
     "react-loadable": "^5.5.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "react-transition-group": "^2.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
